--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "prisma": {
+    "schema": "src/db/prisma/schema.prisma"
+  },
   "dependencies": {
-    "@auth/core": "^0.9.0",
     "@chakra-ui/next-js": "^2.1.4",
     "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.5",
     "@fontsource/syne": "^5.0.5",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.0.0",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
@@ -25,10 +29,14 @@
     "framer-motion": "^10.12.21",
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
+    "next-auth": "^4.22.1",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "prisma": "^5.0.0"
   }
 }
