--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@fontsource/inter": "^5.0.5",
     "@fontsource/syne": "^5.0.5",
+    "@hookform/resolvers": "^3.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@types/node": "20.4.2",
@@ -33,10 +34,13 @@
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.45.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
+    "prettier-plugin-tailwindcss": "^0.4.1",
     "prisma": "^5.0.0"
   }
 }
