--- a/package.json
+++ b/package.json
@@ -33,10 +33,13 @@
     "lucide-react": "^0.260.0",
     "next": "13.4.10",
     "next-auth": "^4.22.1",
+    "nodemailer": "^6.9.3",
     "postcss": "8.4.26",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "resend": "^0.17.1",
+    "server-only": "^0.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
