--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.10",
     "framer-motion": "^10.12.21",
@@ -46,6 +46,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "prisma": "^5.0.0"
   }
