--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "eslint-config-next": "13.4.10",
     "framer-motion": "^10.12.21",
     "lucide-react": "^0.260.0",
-    "next": "13.4.10",
+    "next": "^13.4.9",
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
     "postcss": "8.4.26",
