--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
+    "prettier": "2.8",
     "prettier-plugin-tailwindcss": "^0.4.1",
     "prisma": "^5.0.0"
   }
