--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@uiw/react-md-editor": "^3.23.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.40.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.10",
     "framer-motion": "^10.12.21",
@@ -35,9 +37,12 @@
     "next-auth": "^4.22.1",
     "nodemailer": "^6.9.3",
     "postcss": "8.4.26",
+    "quill-blot-formatter": "^1.0.5",
+    "quill-image-uploader": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-quill": "^2.0.0",
     "server-only": "^0.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
