--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "nodemailer": "^6.9.3",
     "postcss": "8.4.26",
     "quill-blot-formatter": "^1.0.5",
+    "quill-delta-to-html": "^0.12.1",
     "quill-image-uploader": "^1.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
