--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
+    "@types/streamifier": "^0.1.0",
     "@uiw/react-md-editor": "^3.23.5",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
@@ -45,12 +46,12 @@
     "react-hook-form": "^7.45.1",
     "react-quill": "^2.0.0",
     "server-only": "^0.0.1",
+    "streamifier": "^0.1.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
     "@types/bcryptjs": "^2.4.2",
     "prettier": "2.8",
     "prettier-plugin-tailwindcss": "^0.4.1",
