--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.0.0",
     "@types/node": "20.4.2",
+    "@types/nodemailer": "^6.4.9",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "@types/streamifier": "^0.1.0",
