--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "@types/bcryptjs": "^2.4.2",
     "prettier": "2.8",
     "prettier-plugin-tailwindcss": "^0.4.1",
